force-app/main/default/objects/Person__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>TEXT(FLOOR((TODAY() -  Birthday__c) / 366)) + &apos; year&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <type>Text</type>
</CustomField>