force-app/main/default/objects/Person__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Family</label>
    <referenceTo>Family__c</referenceTo>
    <relationshipLabel>FamilyMembers</relationshipLabel>
    <relationshipName>FamilyMembers</relationshipName>
    <type>Lookup</type>
</CustomField>