force-app/main/default/objects/Person__c/fields/Father__c.field-meta.xml
<CustomField>
    <fullName>Father__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Father</label>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Children</relationshipLabel>
    <relationshipName>FathersChild</relationshipName>
    <type>Lookup</type>
</CustomField>