force-app/main/default/objects/Person__c/fields/Favourite_meal__c.field-meta.xml
<CustomField>
    <fullName>Favourite_meal__c</fullName>
    <label>Favourite meal</label>
    <length>32</length>
    <type>Text</type>
</CustomField>