force-app/main/default/objects/Person__c/fields/Friendship__c.field-meta.xml
<CustomField>
    <fullName>Friendship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Friendship</label>
    <referenceTo>Friendship__c</referenceTo>
    <relationshipLabel>Persons</relationshipLabel>
    <relationshipName>Persons</relationshipName>
    <type>Lookup</type>
</CustomField>