force-app/main/default/objects/Person__c/fields/Inheritance__c.field-meta.xml
<CustomField>
    <fullName>Inheritance__c</fullName>
    <formula>IF(NOT( ISBLANK(Father__c) ) &amp;&amp; NOT( ISBLANK(Mother__c) ), &apos;I am &apos; + Father__r.Name +&apos;s and &apos; + Mother__r.Name+&apos;s &apos; + IF(TEXT( Gender__c ) == &apos;Male&apos;, &apos;Son&apos;, &apos;Daughter&apos;), 
 
IF( NOT( ISBLANK(Father__c) ), 
		&apos;I am &apos; + Father__r.Name +&apos;s &apos; + IF(TEXT( Gender__c ) == &apos;Male&apos;, &apos;Son&apos;, &apos;Daughter&apos;), IF( NOT( ISBLANK(Mother__c) ), 
			&apos;I am &apos; + Mother__r.Name +&apos;s &apos; + IF(TEXT( Gender__c ) == &apos;Male&apos;, &apos;Son&apos;, &apos;Daughter&apos;),
			
			&apos;&apos;)) )</formula>
    <label>Inheritance</label>
    <type>Text</type>
</CustomField>