force-app/main/default/objects/Person__c/fields/Injury__c.field-meta.xml
<CustomField>
    <fullName>Injury__c</fullName>
    <label>Injury</label>
    <length>32</length>
    <type>Text</type>
</CustomField>