force-app/main/default/objects/Person__c/fields/Marriage__c.field-meta.xml
<CustomField>
    <fullName>Marriage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marriage</label>
    <referenceTo>Marriage__c</referenceTo>
    <relationshipLabel>Spouses</relationshipLabel>
    <relationshipName>Spouses</relationshipName>
    <type>Lookup</type>
</CustomField>