force-app/main/default/objects/Person__c/fields/Mother__c.field-meta.xml
<CustomField>
    <fullName>Mother__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mother</label>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Children</relationshipLabel>
    <relationshipName>MotherChild</relationshipName>
    <type>Lookup</type>
</CustomField>